[package]
name = "PetraOS"
version = "0.1.0"
authors = ["Ananta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.11"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.13.1"
uart_16550 = "0.2.11"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"