[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
spin.workspace = true
xmas-elf = "0.10.0"
smoltcp = { version = "0.11.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp"] }

[dependencies.ostd]
version = "0.18.0"